# stock-analyzer

./: .gitignore  README.md  docker-compose.yml
cpp/: .dockerignore  CMakeLists.txt  Dockerfile
cpp/include/: alphavantage.h  indicators.h  signals.h
cpp/src/: alphavantage.cpp  indicators.cpp  main.cpp  server.cpp  signals.cpp
cpp/tests/: tests.cpp
docs/: architecture.md
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  index.css
frontend/src/api/: stockApi.js
frontend/src/components/: Header.css  Header.js  InfoPanel.css  InfoPanel.js  SignalCard.css  SignalCard.js  StatsPanel.css  StatsPanel.js  UniverseSelector.css  UniverseSelector.js
sql/: init_db.sql  schema.sql
